sandbox/output
Reorder.java:62: error: invalid method declaration; return type required
    public static mixInto(int toMix, List<Integer> list) {
                  ^
1 error
